update timeline tags

--- a/who-we-are.html
+++ b/who-we-are.html
@@ -680,7 +680,7 @@
             var html4 = '<div class="carousel-item active">'+
                         '<div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 slider_discription">'+
                             '<p class="fontGraphikRegular date" style="color: #2b2a35;">'+value.date+'</p>'+
-                            '<h1 class="fontGraphikSemibold titel" >Tagline</h1>'+
+                            '<h1 class="fontGraphikSemibold titel" >'+value.tagline+'</h1>'+
                             '<img alt="line 2" class="divider_line" src="./images/line-left.png" />'+
                             '<p class="fontLatoRegular diccription" >'+value.dis+'</p>'+
                         '</div>'+
@@ -690,7 +690,7 @@
         var html4 = '<div class="carousel-item">'+
                         '<div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 slider_discription">'+
                             '<p class="fontGraphikRegular date" style="color: #2b2a35;">'+value.date+'</p>'+
-                            '<h1 class="fontGraphikSemibold titel" >Tagline</h1>'+
+                            '<h1 class="fontGraphikSemibold titel" >'+value.tagline+'</h1>'+
                             '<img alt="line 2" class="divider_line" src="./images/line-left.png" />'+
                             '<p class="fontLatoRegular diccription" >'+value.dis+'</p>'+
                         '</div>'+
@@ -719,7 +719,7 @@
             var html4 = '<div class="carousel-item active">'+
                         '<div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 slider_discription">'+
                             '<p class="fontGraphikRegular date" style="color: #2b2a35;">'+value.date+'</p>'+
-                            '<h1 class="fontGraphikSemibold titel" >Tagline</h1>'+
+                            '<h1 class="fontGraphikSemibold titel" >'+value.tagline+'</h1>'+
                             '<img alt="line 2" class="divider_line" src="./images/line-left.png" />'+
                             '<p class="fontLatoRegular diccription" >'+value.dis+'</p>'+
                         '</div>'+
@@ -729,7 +729,7 @@
         var html4 = '<div class="carousel-item">'+
                         '<div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8 slider_discription">'+
                             '<p class="fontGraphikRegular date" style="color: #2b2a35;">'+value.date+'</p>'+
-                            '<h1 class="fontGraphikSemibold titel" >Tagline</h1>'+
+                            '<h1 class="fontGraphikSemibold titel" >'+value.tagline+'</h1>'+
                             '<img alt="line 2" class="divider_line" src="./images/line-left.png" />'+
                             '<p class="fontLatoRegular diccription" >'+value.dis+'</p>'+
                         '</div>'+
