--- a/opportunities.html
+++ b/opportunities.html
@@ -308,7 +308,7 @@
   </div>
 </div>
 
-<div class="col-sm-12 col-md-12 col-xs-12" style="padding: 0">
+<div class="col-sm-12 col-md-12 col-xs-12" style="padding: 0;background-color: #fff;">
   <img alt="celebration" src="./images/celebration.jpg" width="100%" height="auto" style="border-radius: 0">
 </div>
 <div class="col-md-12 col-sm-12 col-xs-12 epic_works">
