update timeline tag 100+ products

--- a/index.html
+++ b/index.html
@@ -567,11 +567,14 @@
         <div class="container billion">
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 titel_button">
                 <!-- <button class="button fontLatoRegular">Let's get serious &nbsp <span> </span></button> -->
-                <img src="./images/confetti (1).svg" alt="confetti" />
+                <!-- <p class="fontNova" style="color: #ffe953d6;font-size: 1.4rem;margin: 0;" >100+ ideas shipped as scalable products</p> -->
+                
+                <p class="fontGraphikSemiRegular" style="color: #ffe953d6;font-size: 1.4rem;margin: 0;" >100+ ideas shipped as scalable products</p>
+                <!-- <img src="./images/confetti (1).svg" alt="confetti" /> -->
             </div>
             <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="text-align: center;">
-                <!-- <h1 class="fontGraphikSemibold">What’s your next billion-<br />dollar idea?</h1> -->
-                <h1 class="fontGraphikSemibold">100+ ideas shipped as scalable <br />products. Yours could be the next!</h1>
+                <!-- <h1 class="fontGraphikSemibold">100+ ideas shipped as scalable <br />products. Yours could be the next!</h1> -->
+                <h1 class="fontGraphikSemibold">What’s your next billion-<br />dollar idea?</h1>
             </div>
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 button_div">
                 <button class="banner_button fontLatoBlack" onclick="window.location.href = './contact'">
