--- a/who-we-are.html
+++ b/who-we-are.html
@@ -363,7 +363,8 @@
             <div class="container billion">
                 <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 titel_button">
                     <!-- <button class="button fontLatoRegular">Let's get serious &nbsp <span> </span></button> -->
-                    <img src="./images/confetti (1).svg" alt="confetti" />
+                    <!-- <img src="./images/confetti (1).svg" alt="confetti" /> -->
+                    <p class="fontGraphikSemiRegular" style="color: #ffe953d6;font-size: 1.4rem;margin: 0;" >100+ ideas shipped as scalable products</p>
                 </div>
                 <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="text-align: center;">
                     <h1 class="fontGraphikSemibold">What’s your next billion-<br />dollar idea?</h1>
