added video on whe we are page

--- a/who-we-are.html
+++ b/who-we-are.html
@@ -135,30 +135,30 @@
 
     <!-- end -->
     <!-- background video -->
-    <!-- <section class="first_section video_player" >
+    <section class="first_section video_player whe_we_are_video_player" >
         <div class="container-fluid" style="padding: 0px;">
             <video loop="loop" muted="muted" autoplay="autoplay" style="top: 0;position: absolute;" >
-                <source src="https://www.crayond.com/images/demonstration.mp4" type="video/mp4"/>
+                <source src="./images/Header-Who-We-Are.mp4" type="video/mp4"/>
             </video>
         </div>
-    </section> -->
+    </section>
     <!-- end -->
     <!-- main title -->
-    <!-- <section class="title_section">
+    <section class="title_section">
         <div class="container" >
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 who_you_are_title fontGraphikBold">
                 <p style="margin-bottom: 0;color: white;text-shadow: 2px 2px 5px #00000078;">Our Story</p>
             </div>
         </div>
-    </section> -->
+    </section>
     
     <!-- end -->
     <div style="background-color: white;">
     <!-- our_vision_mission -->
     <section class="our_vis_mis">
-        <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 who_you_are_title_sort fontGraphikBold">
+        <!-- <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 who_you_are_title_sort fontGraphikBold">
             <p style="margin-bottom: 0;color: white;text-shadow: 2px 2px 5px #00000078;">Our Story</p>
-        </div>
+        </div> -->
         <div class="container">
             <!-- <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 mobile_title fontGraphikBold" style="display: none;">
                 <p >It’s libero tempore, cum soluta.</p>
