added product page

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N5454VZ" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <!-- loader section -->
-    <section id="pre-loader">
+    <!-- <section id="pre-loader">
         <img src="./images/Crayon'd-New-Website-Loader.gif" alt="Crayon'd" srcset="./images/Crayon'd-New-Website-Loader.gif">
-    </section>
+    </section> -->
     <!-- Main header -->
     <div class="header" id="navBar">
         <div class="container">
@@ -97,6 +97,10 @@
                         <span><a class="fontLatoRegular" href="/opportunities">Opportunities</a> </span>
                         <span><a class="fontLatoRegular" href="https://medium.com/crayond" target="_blank">Blog</a></span>
                         <span><a class="fontLatoRegular" href="/contact">Contact</a></span>
+                        <span>
+                            <a class="fontLatoRegular" href="/products">Products</a>
+                            <tag>NEW</tag>
+                        </span>
                     </div>
                     <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 sign_btn">
                         <button class="btn btn-outline-primary fontLatoBlack" onclick="window.location.href = './contact'" >TALK TO US</button>
