--- a/who-we-are.html
+++ b/who-we-are.html
@@ -90,6 +90,10 @@
                         <span><a class="fontLatoRegular" href="/opportunities">Opportunities</a> </span>
                         <span><a class="fontLatoRegular" href="https://medium.com/crayond" target="_blank">Blog</a></span>
                         <span><a class="fontLatoRegular" href="/contact">Contact</a></span>
+                        <span>
+                            <a class="fontLatoRegular" href="/products">Products</a>
+                            <tag>NEW</tag>
+                        </span>
                     </div>
                     <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 sign_btn">
                         <button class="btn btn-outline-primary fontLatoBlack"onclick="window.location.href = './contact'" >TALK TO US</button>
