added product page update

--- a/products.html
+++ b/products.html
@@ -172,7 +172,7 @@
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
                         <div class="img_section " style="margin: auto;">
-                            <img alt="Products Customer Love" src="./images/coming_soon.png" />
+                            <img alt="Products Customer Love" style="padding-top: 40px;" src="./images/coming_soon.png" />
                         </div>
                     </div>
                 </div>
