added product page update mobile responxive

--- a/products.html
+++ b/products.html
@@ -145,6 +145,11 @@
         <div class="container-fluid container_bg_section2">
             <div class="container">
                 <div class="row" style="padding-bottom: 0;">
+                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 mobile_responce_img" style="display: none;">
+                        <div class="img_section" style="margin: auto;">
+                            <img alt="Modern Engineering" src="./images/coming_soon.png" />
+                        </div>
+                    </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <div class="flag" >
@@ -170,7 +175,7 @@
                             </form>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
+                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 desktop_responce_img">
                         <div class="img_section " style="margin: auto;">
                             <img alt="Products Customer Love" style="padding-top: 40px;" src="./images/coming_soon.png" />
                         </div>
@@ -209,6 +214,29 @@
                                 </samp>
                             </a>
                         </div>
+                        <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link mobile_social_links"
+                                style="display: flex;justify-content: flex-start; display: none;">
+                                <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" style="text-decoration: none;">
+                                    <samp class="social_icon">
+                                    <i class="fa fa-linkedin " aria-hidden="true"></i>
+                                    </samp>
+                                </a>
+                                <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook" style="text-decoration: none;">
+                                <samp class="social_icon">
+                                    <i class="fa fa-facebook " aria-hidden="true"></i>
+                                </samp>
+                               </a>
+                               <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram" style="text-decoration: none;" >
+                                    <samp class="social_icon">
+                                        <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
+                                    </samp>
+                                </a>
+                                <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter" style="text-decoration: none;">
+                                    <samp class="social_icon">
+                                    <i class="fa fa-twitter " aria-hidden="true"></i>
+                                </samp>
+                            </a>
+                            </div>
                     </div>
                 </div>
             </footer>
