added product image fix

--- a/products.html
+++ b/products.html
@@ -150,7 +150,7 @@
                             <img alt="Modern Engineering" src="./images/coming_soon.png" />
                         </div>
                     </div>
-                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
+                    <div class="col-12 col-sm-12 col-xs-12 col-md-5 col-lg-5 col-xl-5">
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <div class="flag" >
                                 <img alt="monitor" src="./images/flag-shape.svg" />
@@ -175,9 +175,9 @@
                             </form>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 desktop_responce_img">
+                    <div class="col-12 col-sm-12 col-xs-12 col-md-7 col-lg-7 col-xl-7 desktop_responce_img" style="padding: 0;">
                         <div class="img_section " style="margin: auto;">
-                            <img alt="Products Customer Love" style="padding-top: 40px;" src="./images/coming_soon.png" />
+                            <img alt="Products Customer Love" style="padding:0;border-radius: 0;" src="./images/coming-soon-new.png" />
                         </div>
                     </div>
                 </div>
