--- a/products.html
+++ b/products.html
@@ -165,7 +165,7 @@
                         </div> -->
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <p class="text_para fontLatoRegular">
-                                To be renowned as a brand that constantly <br/>innovates, strives for excellence, transforms <br/>people into influential leaders.
+                                To be renowned as a brand that constantly innovates, strives for excellence, transforms people into influential leaders.
                             </p>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 coming_soon_email">
