added approach page

--- a/products.html
+++ b/products.html
@@ -361,9 +361,8 @@
                 method:"POST",
                 url:"https://api.sendgrid.com/v3/mail/send",
                 headers:{
-                    crossDomain: false,
                     "content-type":"application/json",
-                    'Authorization':"Bearer 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"
+                    'Authorization':"Bearer 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"
                 },
                 data:
                     JSON.stringify( {
@@ -391,9 +390,8 @@
                 method:"POST",
                 url:"https://api.sendgrid.com/v3/mail/send",
                 headers:{
-                    crossDomain: false,
                     "content-type":"application/json",
-                    'Authorization':"Bearer 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"
+                    'Authorization':"Bearer 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"
                 },
                 data:
                     JSON.stringify( {
