--- a/test.html
+++ b/test.html
@@ -134,7 +134,7 @@
     // Init ScrollMagic
         var ctrl = new ScrollMagic.Controller({
         globalSceneOptions: {
-            triggerHook: 'onLeave'
+            triggerHook: '-7'
         }
         });
 
@@ -147,12 +147,12 @@
             triggerElement: this
         })
         .setPin(this)
-        // .addIndicators({
-        //     colorStart: "rgba(255,255,255,0.5)",
-        //     colorEnd: "rgba(255,255,255,0.5)", 
-        //     colorTrigger : "rgba(255,255,255,1)",
-        //     name:name
-        //     })
+        .addIndicators({
+            colorStart: "rgba(255,255,255,0.5)",
+            colorEnd: "rgba(255,255,255,0.5)", 
+            colorTrigger : "rgba(255,255,255,1)",
+            name:name
+            })
         .loglevel(3)
         .addTo(ctrl);
         
