--- a/ourapproach.html
+++ b/ourapproach.html
@@ -257,7 +257,7 @@
     <!-- end -->
     
     <section class="why_us" id="plan_section">
-        <div class="container-fluid container_bg_section2" style="background-color: #eff8f6;display: flex;height: 100vh;">
+        <div class="container-fluid container_bg_section2 project_planing" style="background-color: #eff8f6;display: flex;height: 100vh;">
             <div class="container" style="margin: auto;">
                 <div class="row" style="padding: 0;">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 mobile_responce_img" style="display: none;">
@@ -381,7 +381,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                        <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="padding: 26px 16px;margin-top: 4%;background-color: #fff;border-radius: 8px;border: solid 1px rgba(82, 162, 142, 0.31);">
+                        <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 mobile_tap_section" style="padding: 26px 16px;margin-top: 4%;background-color: #fff;border-radius: 8px;border: solid 1px rgba(82, 162, 142, 0.31);">
                         <!-- <div class="img_section" style="margin: auto;"> -->
                             <tapSection style="padding-left: 0;"><span class="active_code tap" data-code="1">1.Brainstorm</span></tapSection>
                             <tapSection><span class="tap" data-code="2">2.Handshake</span></tapSection>
@@ -395,7 +395,7 @@
         </div>
     </section>
     <section class="why_us" id="design_section">
-        <div class="container-fluid container_bg_section2" style="background-color: #f3f5ff;display: flex;height: 100vh;">
+        <div class="container-fluid container_bg_section2 project_planing" style="background-color: #f3f5ff;display: flex;height: 100vh;">
             <div class="container" style="margin: auto;">
                 <div class="row" style="padding: 0;">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 mobile_responce_img" style="display: none;">
@@ -519,7 +519,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                        <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="padding: 26px 16px;margin-top: 4%;background-color: #fff;border-radius: 8px;border: solid 1px rgba(82, 162, 142, 0.31);">
+                        <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 mobile_tap_section" style="padding: 26px 16px;margin-top: 4%;background-color: #fff;border-radius: 8px;border: solid 1px rgba(82, 162, 142, 0.31);">
                         <!-- <div class="img_section" style="margin: auto;"> -->
                             <tapSection style="padding-left: 0;"><span class="active_sale tap2" data-sale="1">1.Wireframe User Journey</span></tapSection>
                             <tapSection><span class="tap2" data-sale="2">2.Sketch</span></tapSection>
@@ -533,7 +533,7 @@
         </div>
     </section>
     <section class="why_us" id="build_section">
-        <div class="container-fluid container_bg_section2" style="background-color: #f8f5ef;display: flex;height: 100vh;">
+        <div class="container-fluid container_bg_section2 project_planing" style="background-color: #f8f5ef;display: flex;height: 100vh;">
             <div class="container" style="margin: auto;">
                 <div class="row" style="padding: 0;">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 mobile_responce_img" style="display: none;">
@@ -657,7 +657,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                        <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="padding: 26px 16px;margin-top: 4%;background-color: #fff;border-radius: 8px;border: solid 1px rgba(82, 162, 142, 0.31);">
+                        <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 mobile_tap_section" style="padding: 26px 16px;margin-top: 4%;background-color: #fff;border-radius: 8px;border: solid 1px rgba(82, 162, 142, 0.31);">
                         <!-- <div class="img_section" style="margin: auto;"> -->
                             <tapSection style="padding-left: 0;"><span class="active_build tap3" data-build="1">1.Setup Environment</span></tapSection>
                             <tapSection><span class="tap3" data-build="2">2.Start Sprinting</span></tapSection>
@@ -671,7 +671,7 @@
         </div>
     </section>
     <section class="why_us" id="deploy_section">
-            <div class="container-fluid container_bg_section2" style="background-color: #f8eff6;display: flex;height: 100vh;">
+            <div class="container-fluid container_bg_section2 project_planing" style="background-color: #f8eff6;display: flex;height: 100vh;">
                 <div class="container" style="margin: auto;">
                     <div class="row" style="padding: 0;">
                         <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 mobile_responce_img" style="display: none;">
@@ -795,7 +795,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                            <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="padding: 26px 16px;margin-top: 4%;background-color: #fff;border-radius: 8px;border: solid 1px rgba(82, 162, 142, 0.31);">
+                            <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 mobile_tap_section" style="padding: 26px 16px;margin-top: 4%;background-color: #fff;border-radius: 8px;border: solid 1px rgba(82, 162, 142, 0.31);">
                             <!-- <div class="img_section" style="margin: auto;"> -->
                                 <tapSection style="padding-left: 0;"><span class="active_deploy tap4" data-deploy="1">1.Setup CI/CD</span></tapSection>
                                 <tapSection><span class="tap4" data-deploy="2">2.Ship working modules</span></tapSection>
@@ -809,7 +809,7 @@
             </div>
     </section>
     <section class="why_us" id="launch_section">
-            <div class="container-fluid container_bg_section2" style="background-color: #f2f2f2;display: flex;height: 100vh;">
+            <div class="container-fluid container_bg_section2 project_planing" style="background-color: #f2f2f2;display: flex;height: 100vh;">
                 <div class="container" style="margin: auto;">
                     <div class="row" style="padding: 0;">
                         <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 mobile_responce_img" style="display: none;">
@@ -933,7 +933,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                            <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="padding: 26px 16px;margin-top: 4%;background-color: #fff;border-radius: 8px;border: solid 1px rgba(82, 162, 142, 0.31);">
+                            <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 mobile_tap_section" style="padding: 26px 16px;margin-top: 4%;background-color: #fff;border-radius: 8px;border: solid 1px rgba(82, 162, 142, 0.31);">
                             <!-- <div class="img_section" style="margin: auto;"> -->
                                 <tapSection style="padding-left: 0;"><span class="active_launch tap5" data-launch="1">1.Freeze Development</span></tapSection>
                                 <tapSection><span class="tap5" data-launch="2">2.Conurrence from stake holders</span></tapSection>
