tap header contant active link nav mobile tag menu icon

--- a/ourapproach.html
+++ b/ourapproach.html
@@ -177,7 +177,7 @@
             </div>
             <!-- <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 "> -->
                 <p class="move_next_section">
-                    <a href="#planning_section">
+                    <a href="#plan_section">
                         <img  class="arrow bounce" src="./images/arrow_down.svg" alt="arrow_down" />
                     </a>
                 </p>
