--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 </div>
             </div>
             <div class="container">
-                <div class="row" style="padding-top: 6%;">
+                <div class="row" >
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <div class="fa_icon" style="background-color: #E0E4FA;">
@@ -286,7 +286,8 @@
                             <h1 class="fontGraphikSemibold">Build products your customers love</h1>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                        <img alt="line-left" class="divider_line" src="./images/line-left.png" />
+                        <img alt="line-left" class="divider_line left_line" src="./images/line-left.png" />
+                        <img alt="line-3" class="divider_line center_line" src="./images/line-3.png" style="display: none;"/>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <p class="text_para fontLatoRegular">
@@ -323,7 +324,8 @@
                             <h1 class="fontGraphikSemibold">Build better, with modern engineering</h1>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                             <img alt="line-left" class="divider_line" src="./images/line-left.png" />
+                            <img alt="line-left" class="divider_line left_line" src="./images/line-left.png" />
+                            <img alt="line-3" class="divider_line center_line" src="./images/line-3.png" style="display: none;"/>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <p class="text_para fontLatoRegular">
@@ -355,7 +357,8 @@
                             <h1 class="fontGraphikSemibold">Launch early, reach your customers first</h1>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                                <img alt="line-lef" class="divider_line" src="./images/line-left.png" />
+                            <img alt="line-left" class="divider_line left_line" src="./images/line-left.png" />
+                            <img alt="line-3" class="divider_line center_line" src="./images/line-3.png" style="display: none;"/>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <p class="text_para fontLatoRegular">
@@ -394,7 +397,8 @@
                             <h1 class="fontGraphikSemibold">And finally, no pricing surprises.</h1>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                                <img alt="line-left" class="divider_line" src="./images/line-left.png" />
+                            <img alt="line-left" class="divider_line left_line" src="./images/line-left.png" />
+                            <img alt="line-3" class="divider_line center_line" src="./images/line-3.png" style="display: none;"/>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <p class="text_para fontLatoRegular">
