update on tap menu text and color change

--- a/ourapproach.html
+++ b/ourapproach.html
@@ -610,10 +610,10 @@
                     <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 mobile_tap_section" style="padding: 26px 16px;margin-top: 4%;background-color: #fff;border-radius: 8px;border: solid 1px rgba(82, 162, 142, 0.31);">
                         <!-- <div class="img_section" style="margin: auto;"> -->
-                            <tapSection style="padding-left: 0;"><span class="active_sale tap2" data-sale="1">1.Wireframe&nbsp;User&nbsp;Journey</span></tapSection>
+                            <tapSection style="padding-left: 0;"><span class="active_sale tap2" data-sale="1">1.Wireframe</span></tapSection>
                             <tapSection><span class="tap2" data-sale="2">2.Sketch</span></tapSection>
                             <tapSection><span class="tap2" data-sale="3">3.Visual&nbsp;Design</span></tapSection>
-                            <tapSection><span class="tap2" data-sale="4">4.Inside&nbsp;matters&nbsp;too</span></tapSection>
+                            <tapSection><span class="tap2" data-sale="4">4.Architecture</span></tapSection>
                             <tapSection style="padding-right: 0;border: 0;"><span class="tap2" data-sale="5">5.Considerations</span></tapSection>
                         </div>
                     </div>
@@ -754,10 +754,10 @@
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 mobile_tap_section" style="padding: 26px 16px;margin-top: 4%;background-color: #fff;border-radius: 8px;border: solid 1px rgba(82, 162, 142, 0.31);">
                         <!-- <div class="img_section" style="margin: auto;"> -->
                             <tapSection style="padding-left: 0;"><span class="active_build tap3" data-build="1">1.Setup&nbsp;Environment</span></tapSection>
-                            <tapSection><span class="tap3" data-build="2">2.Start&nbsp;Sprinting</span></tapSection>
-                            <tapSection><span class="tap3" data-build="3">3.Build&nbsp;the&nbsp;user&nbsp;interaces</span></tapSection>
-                            <tapSection><span class="tap3" data-build="4">4.Build&nbsp;the&nbsp;business&nbsp;logic</span></tapSection>
-                            <tapSection style="padding-right: 0;border: 0;"><span class="tap3" data-build="5">5.Integrate&nbsp;&&nbsp;Test</span></tapSection>
+                            <tapSection><span class="tap3" data-build="2">2.Sprint</span></tapSection>
+                            <tapSection><span class="tap3" data-build="3">3.Front-End</span></tapSection>
+                            <tapSection><span class="tap3" data-build="4">4.Back-End</span></tapSection>
+                            <tapSection style="padding-right: 0;border: 0;"><span class="tap3" data-build="5">5.Integration</span></tapSection>
                         </div>
                     </div>
                 </div>
@@ -897,10 +897,10 @@
                             <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 mobile_tap_section" style="padding: 26px 16px;margin-top: 4%;background-color: #fff;border-radius: 8px;border: solid 1px rgba(82, 162, 142, 0.31);">
                             <!-- <div class="img_section" style="margin: auto;"> -->
                                 <tapSection style="padding-left: 0;"><span class="active_deploy tap4" data-deploy="1">1.Setup&nbsp;CI/CD</span></tapSection>
-                                <tapSection><span class="tap4" data-deploy="2">2.Ship&nbsp;working&nbsp;modules</span></tapSection>
-                                <tapSection><span class="tap4" data-deploy="3">3.Continuous&nbsp;Tests</span></tapSection>
-                                <tapSection><span class="tap4" data-deploy="4">4.UAT&nbsp;on&nbsp;the&nbsp;go&nbsp;&&nbsp;Bug&nbsp;Fixes</span></tapSection>
-                                <tapSection style="padding-right: 0;border: 0;"><span class="tap4" data-deploy="5">5.Iterate&nbsp;build&nbsp;cycles</span></tapSection>
+                                <tapSection><span class="tap4" data-deploy="2">2.Releases</span></tapSection>
+                                <tapSection><span class="tap4" data-deploy="3">3.Quality&nbsp;Assurance</span></tapSection>
+                                <tapSection><span class="tap4" data-deploy="4">4.Acceptance</span></tapSection>
+                                <tapSection style="padding-right: 0;border: 0;"><span class="tap4" data-deploy="5">5.Build&nbsp;Cycles</span></tapSection>
                             </div>
                         </div>
                     </div>
@@ -1039,10 +1039,10 @@
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 mobile_tap_section scroll_styles" style="padding: 26px 16px;margin-top: 4%;background-color: #fff;border-radius: 8px;border: solid 1px rgba(82, 162, 142, 0.31);">
                             <!-- <div class="img_section" style="margin: auto;"> -->
-                                <tapSection style="padding-left: 0;"><span class="active_launch tap5" data-launch="1">1.Freeze&nbsp;Development</span></tapSection>
-                                <tapSection><span class="tap5" data-launch="2">2.Conurrence&nbsp;from&nbsp;stake&nbsp;holders</span></tapSection>
-                                <tapSection><span class="tap5" data-launch="3">3.Prepare&nbsp;a&nbsp;Go-Live&nbsp;Checklist</span></tapSection>
-                                <tapSection><span class="tap5" data-launch="4">4.Setup&nbsp;production&nbsp;environment</span></tapSection>
+                                <tapSection style="padding-left: 0;"><span class="active_launch tap5" data-launch="1">1.Freeze</span></tapSection>
+                                <tapSection><span class="tap5" data-launch="2">2.Go&nbsp;Ahead</span></tapSection>
+                                <tapSection><span class="tap5" data-launch="3">3.Checklist</span></tapSection>
+                                <tapSection><span class="tap5" data-launch="4">4.Productio&nbsp;Box</span></tapSection>
                                 <tapSection style="padding-right: 0;border: 0;"><span class="tap5" data-launch="5">5.Launch</span></tapSection>
                             </div>
                         </div>
