--- a/products.html
+++ b/products.html
@@ -182,14 +182,14 @@ input:focus:invalid {
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                            <h1 class="fontGraphikSemibold">We’re <br/>Coming soon…</h1>
+                            <h1 class="fontGraphikSemibold">We’re <br/>Launching soon ....</h1>
                         </div>
                         <!-- <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                         <img alt="line-left" class="divider_line" src="./images/line-left.png" />
                         </div> -->
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <p class="text_para fontLatoRegular">
-                                To be renowned as a brand that constantly innovates, strives for excellence, transforms people into influential leaders.
+                                Our builders are busy designing and building dream products for businesses. Stay tuned for updates on our complete product inventory!
                             </p>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
